# lab-05-cs100

./: .gitignore  CMakeLists.txt  main.cpp  select.hpp  select_and.hpp  select_and_test.hpp  select_contains.hpp  select_contains_test.hpp  select_not.hpp  select_not_test.hpp  select_or.hpp  select_or_test.hpp  spreadsheet.cpp  spreadsheet.hpp  spreadsheet_test.hpp  test.cpp
test_answers/: null_select.txt  or_both.txt  or_left.txt  or_right.txt  partial_string.txt  whole_string.txt
